<resources>
    <string name="app_name">HubbDesign</string>

    <string name="google_map_key">AIzaSyANLW2jVj5uMK_4-YZK7mhknjMOhgW63e4</string>
    <string name="montserrat_medium">Montserrat-Medium.ttf</string>
    <string name="myriadPro_regular">MyriadPro-Regular.ttf</string>
    <string name="nunitoSans_bold">Montserrat-Bold.ttf</string>
    <string name="nunitoSans_bold_italic">NunitoSans-BoldItalic.ttf</string>
    <string name="nunitoSans_extra_bold">NunitoSans-ExtraBold.ttf</string>
    <string name="nunitoSans_extra_bold_italic">NunitoSans-ExtraBoldItalic.ttf</string>
    <string name="nunitoSans_extra_light">NunitoSans-ExtraLight.ttf</string>
    <string name="nunitoSans_extra_light_italic">NunitoSans-ExtraLightItalic.ttf</string>
    <string name="nunitoSans_italic">NunitoSans-Italic.ttf</string>
    <string name="nunitoSans_light">NunitoSans-Light.ttf</string>
    <string name="nunitoSans_light_italic">NunitoSans-LightItalic.ttf</string>
    <string name="nunitoSans_regular">Montserrat-Regular.ttf</string>
    <string name="nunitoSans_semi_bold">Montserrat-SemiBold.ttf</string>
    <string name="nunitoSans_semi_bold_italic">NunitoSans-SemiBoldItalic.ttf</string>
    <string name="where_would_you_like_to_work_robert">Where would you like to work, Robert?</string>
    <string name="find_a_hubb_workspace">Find a hubb workspace</string>
    <string name="one_waterloo">One Waterloo</string>
    <string name="_3km_away">3km away</string>
    <string name="hubb_for_one">Hubb for One</string>
    <string name="description">Lorem ipsum dolor sit amet,
        consectetur adipiscing elit. Aliquam at porttitor sem.
        Aliquam erat volutpat. Donec placerat nisl magna, et faucibus arcu condimentum sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at porttitor sem. Aliquam erat volutpat. Donec placerat nisl magna, et faucibus arcu condimentum sed.</string>
    <string name="legal">Legal</string>
    <string name="log_out">Log Out</string>
    <string name="cancel_policy">Cancelation Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="contact_support">Contact Support</string>
    <string name="faq">FAQ</string>
    <string name="location_about_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at porttitor sem.  Aliquam erat volutpat. Donec placerat nisl magna, et faucibus arcu condimentum sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at porttitor sem.  Aliquam erat volutpat. Donec placerat nisl magna, et faucibus arcu condimentum sed.</string>
    <string name="location_TheNeighborhood_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at porttitor sem.  Aliquam erat volutpat. Donec placerat nisl magna, et faucibus arcu condimentum sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at porttitor sem.  Aliquam erat volutpat. Donec placerat nisl magna, et faucibus arcu condimentum sed.</string>
    <string name="cancelationPolicyDescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at porttitor sem.  Aliquam erat volutpat. Donec placerat nisl magna, et faucibus arcu condimentum sed.</string>
    <string name="signup_first_number_description">We\'ll text you to confirm your number. Standard message and data rates apply.</string>
    <string name="verify_number_hint">We sent a 4 digit code to your phone. To verify it, please enter the code provided below.</string>
    <string name="signup_second_terms_hint">By selecting agree and continue below, I confirm that I am over 18 years old agree to the terms of service and privacy policy of this app.</string>
    <string name="about_this_offer_description">What\'s better than a cold brew in the summer? A free cold brew.<p>\n\nStarbucks is offering a free refill to anyone who has reserved a Hubb in the month of June.</p> <p>\n\nOffer is only available at select locations and redeemable once.</p></string>
    <string name="reservation_confirm_direction">This Hubb is located on the 2nd floor of building B, NW. You\'ll see starbucks near by.</string>
    <string name="open_hub_instruction">Instructions go here Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at porttitor sem.</string>
    <string name="open_hub_need_help">Contact Support information Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at porttitor sem.</string>

</resources>