<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvNearBy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivCvNearBy"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_150sdp"
                android:background="@drawable/image"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivCvNearByLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_4sdp"
                android:background="@drawable/ic_baseline_circle_24"
                android:src="@drawable/ic_baseline_favorite_24"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tvCvNearByHeading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/gill_sans_bold"
                android:text="@string/one_waterloo"
                android:textColor="#222222"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivCvNearBy" />

            <TextView
                android:id="@+id/tvCvNearByDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/gill_sans"
                android:text="@string/hubb_for_one"
                android:textColor="#8a8a8a"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCvNearByHeading" />

            <TextView
                android:id="@+id/tvCvNearByKiloMeter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:fontFamily="@font/gill_sans"
                android:gravity="center_vertical"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@string/_3km_away"
                android:textColor="@color/featuredLocation_blue"
                android:textSize="@dimen/_10sdp"
                app:drawableStartCompat="@drawable/ic_baseline_location_on_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCvNearByDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>