<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFF1F4"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".search.SearchLocationActivity">

    <ImageView
        android:id="@+id/ivSearchLocationBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:src="@drawable/ic_back_arrow" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never"
        android:scrollbars="none">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.app.hubbdesign.custom.MyCustomTextView
                android:id="@+id/tvSearchLocationHeadingUserName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/where_would_you_like_to_work_robert"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent "
                app:setTypeFace="@string/nunitoSans_extra_bold" />

            <com.app.hubbdesign.custom.MyCustomTextView
                android:id="@+id/tvSearchLocationFindHubWorkspace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/ic_rounded_white_text_view"
                android:drawableStart="@drawable/ic_baseline_search_24"
                android:drawableEnd="@drawable/ic_icon_recenter"
                android:drawablePadding="@dimen/_10sdp"
                android:fontFamily="@font/gill_sans_light"
                android:padding="8dp"
                android:text="@string/find_a_hubb_workspace"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSearchLocationHeadingUserName" />

            <com.app.hubbdesign.custom.MyCustomTextView
                android:id="@+id/tvSearchLocationPreviousSearchHeading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:fontFamily="@font/gill_sans_bold"
                android:text="Previous Searches"
                android:textColor="@color/featuredLocation_blue"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSearchLocationFindHubWorkspace" />

            <View
                android:id="@+id/searchLocationLinePrevious"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="3dp"
                android:layout_marginTop="@dimen/_3sdp"
                android:background="@color/featuredLocation_blue"
                app:layout_constraintStart_toStartOf="@id/tvSearchLocationPreviousSearchHeading"
                app:layout_constraintTop_toBottomOf="@id/tvSearchLocationPreviousSearchHeading" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSearchLocationPreviousSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:overScrollMode="never"
                android:scrollbars="none"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/searchLocationLinePrevious" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.app.hubbdesign.custom.MyCustomTextView
        android:id="@+id/tvSearchLocationNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/ic_rounded_background_button"
        android:drawableEnd="@drawable/ic_white_next_arrow"
        android:drawablePadding="@dimen/_10sdp"
        android:gravity="center"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:text="NEXT"
        android:textColor="@color/white"
        android:textSize="@dimen/_10sdp"
        app:drawableTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvSearchLocationPreviousSearch"
        app:setTypeFace="@string/nunitoSans_bold" />
</LinearLayout>